:memo: 补充内容(依据ESI Practice Test)

--- a/docs/Cloud/Azure/AZ-104.md
+++ b/docs/Cloud/Azure/AZ-104.md
@@ -26,6 +26,8 @@
 * [Sample code for Azure PowerShell documentation](https://docs.microsoft.com/en-us/samples/azure/azure-docs-powershell-samples/sample-code-for-azure-powershell-documentation/)
 * [🔗Which PowerShell Commands I should know for AZ-104 Certification?](https://vbcloudboy.medium.com/which-powershell-commands-i-should-know-for-az-104-certification-c22a45fdd8f6)
 
+[where-objectとselect-object](https://milestone-of-se.nesuke.com/sv-basic/windows-basic/powershell-object/)
+
 ### Azure Resource Manager
 
 ![resource manager](https://docs.microsoft.com/en-us/training/wwl-azure/use-azure-resource-manager/media/resource-manager-016a1bac.png)
@@ -282,6 +284,20 @@ The advantages to infrastructure as code are:
 * Each management group can have **many children**.
 * The root management group can't be moved or deleted, unlike other management groups.
 
+#### Move Resources
+
+* App Service
+  * You need to delete the Secure Sockets Layer(SSL) certificate from each App Service before moving it to the new resource group
+  * You cannot move an App Service with an SSL certificate configured
+  * You need to delete the certificate first, move the App Service, and then upload the certificate again
+* Load Balancer
+  * You cannot move the Load Balancer within the same subscription
+  * A Standard Load Balancer cannot be moved either within the same subscription or between subscriptions
+* VNet
+  * When you want to move a VNet with a peer configured, you need to disable it before moving the VNet
+  * When you move a VNet, you need to move **all of its dependent resources**
+  * You can only move the VNet within the same subscription
+
 ## Manage identities and governance in Azure
 
 ### Azure Active Directory
@@ -406,6 +422,16 @@ The advantages to infrastructure as code are:
   * Joined to on-premises AD and Azure AD requiring organizational account to sign in to the device
   * Gives you all the benefits of being cloud enabled, with still having full access to your on-prem infrastructure.
 
+#### SSPR
+
+> SSPR: self-service password reset
+
+* SSPR is supported for **all users**, including cloud-only users.
+* You can configure password writeback to update on-premises passwords.
+* For cloud-only users, passwords are stored in Azure AD.
+* You can configure SSPR registration by group or for all domain users.
+* **You cannot configure SSPR registration by user.**
+
 ### Configure User and Group Account
 
 #### User Account Types
@@ -445,7 +471,7 @@ The advantages to infrastructure as code are:
 * The tag name remains constant for all resources that have the tag applied.
 * The tag value can be selected from a defined set of values, or unique for a specific resource instance.
 * A resource or resource group can have a maximum of 50 tag name/value pairs.
-* Tags applied to a resource group aren't inherited by the resources in the resource group.
+* **Tags applied to a resource group aren't inherited by the resources in the resource group.**
 
 #### Cost Saving
 
@@ -496,6 +522,67 @@ The advantages to infrastructure as code are:
 * Cost
 * Management
 
+#### Azure Policy Effects
+
+!!! tip
+
+    The order of evaluation of the policy effect: Disabled -> Append/Modify -> Deny -> Audit.
+
+* The Disable effect is always evaluated first to decide whether the rule should be evaluated afterwards.
+* The Append effect **does not modify** the value of an existing field in a resource.
+  * The Append effect adds additional fields during the creation or update of a resource.
+  * If the field already exists in the resource and the values in the resource and the policy are different, then the policy acts as a deny and reject the requests.
+* The Audit effect will create a warning event in the activity log for non-compliant resources.
+  * The Audit effect is evaluated last, before the Resource Provider handles a create or update request.
+  * You typically use the audit effect when you want to track non-compliant resources.
+* The DeployIfNotExists effect is only evaluated if the request executed by the Resource Provider returns a **success** status code.
+  * Once the effect has been evaluated, it is triggered if the resource does not exist or if the resource defined by ExistenceCondition is evaluated as false.
+
+#### Definition Structure
+
+[🔗definition-structure](https://learn.microsoft.com/en-us/azure/governance/policy/concepts/definition-structure)
+
+```json
+{
+    "properties": {
+        "displayName": "Allowed locations",
+        "description": "This policy enables you to restrict the locations your organization can specify when deploying resources.",
+        "mode": "Indexed",
+        "metadata": {
+            "version": "1.0.0",
+            "category": "Locations"
+        },
+        "parameters": {
+            "allowedLocations": {
+                "type": "array",
+                "metadata": {
+                    "description": "The list of locations that can be specified when deploying resources",
+                    "strongType": "location",
+                    "displayName": "Allowed locations"
+                },
+                "defaultValue": [ "westus2" ]
+            }
+        },
+        "policyRule": {
+            "if": {
+                "not": {
+                    "field": "location",
+                    "in": "[parameters('allowedLocations')]"
+                }
+            },
+            "then": {
+                "effect": "deny"
+            }
+        }
+    }
+}
+```
+
+* Mode
+  * `all`: evaluate resource groups, subscriptions, and all resource types
+  * `indexed`: only evaluate resource types that support tags and location
+    * indexed should be used when creating policies that enforce tags or locations
+
 ### Configure Role-Based Access Control
 
 > Role-based access control (RBAC) helps you manage who has access to Azure resources, what they can do with those resources, and what areas they have access to.
@@ -522,12 +609,16 @@ The advantages to infrastructure as code are:
 
     Azure Resource Manager roles should be used instead of Classic administrator roles.
 
-#### roles
+#### built-in roles
 
 * Reader: Can view existing Azure resources.
 * Contributor: Can create and manage all types of Azure resources, but can’t grant access to others.
 * Owner: Has full access to all resources, including the right to delegate access to others.
-* User Access Administrator: Lets you manage user access to Azure resources.(Note: this is an Azure AD role)
+* User Access Administrator: Lets you manage user access to Azure resources.
+
+* Co-Administrator: a classic subscription role that is equivalent to the Owner Role-Based Access Control role.
+* User Administrator: an Azure AD administrator that does not control access to any Azure resources.
+
 * Deny Assignments
   * Similar to windows deny files permission
   * Blocks users from performing specific actions even if a role assignments allows it
@@ -623,6 +714,11 @@ The order of operations to rotate storage account access keys:
 * Geo-zone-redundant storage (GZRS) – ZRS + Asynchronous copy to secondary region (three more copies using LRS) – Read only access
   * Read-access geo-zone-redundant storage (RA-GZRS) – Read Access on GZRS
 
+!!! note
+
+    The only two methods that support LRS to ZRS migrations are to perform a **manual migration** of the data or to request a **live migration**.  
+    However, live migration is not supported when you are migrating Azure Files Network File System version 4.1(NFSv4.1)
+
 ### Configure Blob Storage
 
 #### Blob service resources
@@ -662,6 +758,10 @@ By default, container data is private to the account owner.
   * The Archive tier is optimized for data that can tolerate several hours of retrieval latency and will remain in the Archive tier for at least **180** days.
   * The Archive tier is the most cost-effective option for storing data, but accessing that data is more expensive than accessing data in the Hot or Cool tiers.
 
+!!! tip
+
+    The Cool access tier is optimal for storing data for long periods of time at low cost, with the data always being available immediately when needed.
+
 #### Lifecycle management
 
 * Transition blobs to a cooler storage tier (hot to cool, hot to archive, or cool to archive) to optimize for performance and cost.
@@ -671,10 +771,13 @@ By default, container data is private to the account owner.
 
 #### Object replication
 
-* Object replication requires that **blob versioning** is enabled on both the source and destination accounts.
+* Object replication requires that **blob versioning is enabled on both the source and destination accounts**, and that **blob change feed is enabled for the source account**.
+  * The change feed provides transaction log support for changes made to blobs and blob metadata in your source storage account
+  * Blob Versioning is necessary to automatically maintain previous versions of blob objects
 * Object replication **doesn't support blob snapshots**. Any snapshots on a blob in the source account are not replicated to the destination account.
 * Object replication is supported when the source and destination accounts are in the **hot or cool** tier. The source and destination accounts may be in different tiers.
-* When you configure object replication, you create a replication policy that specifies the source storage account and the destination account. A replication policy includes one or more rules that specify a source container and a destination container and indicate which block blobs in the source container will be replicated.
+* When you configure object replication, you create a replication policy that specifies the source storage account and the destination account.
+* A replication policy includes one or more rules that specify a source container and a destination container and indicate which block blobs in the source container will be replicated.
 
 #### Types of blobs
 
@@ -778,6 +881,10 @@ A SAS token:
   * May be lost during a maintenance or redeploy.
   * Successful reboot will persist data.
 
+!!! tip
+
+    You can remove a disk as long as nothing is actively using the disk when it is detached
+
 #### Latency VS IOPS VS Throughput
 
 * **Latency** is a time taken to respond to an I/O request
@@ -838,7 +945,7 @@ A SAS token:
   * Truly end-to-end encryption
   * Prerequisite: must enable the feature for your subscription
 
-### Configure Azure files and Azure File Sync
+### Configure Azure files storage and Azure File Sync
 
 * Enables you to create files shares in the cloud, and access these file shares from anywhere with an internet connection
 * Mounted concurrently by cloud or on-premises deployments.
@@ -867,9 +974,13 @@ Cloud tiering allows frequently accessed files to be cached on the local server.
 #### Managing file share
 
 * File share quotas
-* Windows - ensure 445 port is open
+* Windows - ensure 445 port(Server Message Block(SMB) protocol) is open - Error 67 is returned when this port is blocked
 * Linux / MacOS - mount the drive
 * Secure transfer required - SMB 3.0 encryption
+
+!!! note
+
+    Azure File currently allows you to mount a share to Windows Server 2019 and above
 
 #### file sync components
 
@@ -907,15 +1018,24 @@ The Azure Import/Export Tool is the drive preparation and repair tool that you c
 * The AzCopy tool can work with two different storage accounts.
 * Authentication options include Active Directory or SAS token
 
-!!! note
+!!! tip
 
     AzCopy is available on Windows, Linux, and macOS.
+
+!!! note
+
+    Authorize AzCopy:
+
+    * Blob storage: Azure AD & SAS
+    * File storage: SAS only
 
 ### Create an Azure Storage account
 
 ![azure storage](https://learn.microsoft.com/en-us/training/modules/create-azure-storage-account/media/2-azure-storage.png)
 
 > A storage account is a container that groups a set of Azure Storage services together.
+
+[storage account overview](https://learn.microsoft.com/en-us/azure/storage/common/storage-account-overview)
 
 #### Storage account settings
 
@@ -944,14 +1064,32 @@ The settings that are defined by a storage account are:
   * Storage (general purpose v1): a legacy kind that supports all storage types but may not support all features
   * Blob storage: a legacy kind that allows only block blobs and append blobs
 
-### Control access to Azure Storage with shared access signatures
+!!! note
 
-#### Access Azure Storage
+    You **cannot** convert a Storage/StorageV2 account to a premium storage account  
+    You can convert a Storage account to StorageV2 account
+
+#### Access Keys
+
+Steps to update storage account key:
+
+* Step1: Update App using secondary key
+* Step2: Regenerate primary key
+* Step3: Update App using new primary key
+* Step4: Regenerate secondary key
+
+### Control access to Azure Storage
+
+#### Access Azure Storage Methods
 
 * Public access
 * Azure Active Directory (Azure AD)
 * Shared key
 * Shared access signature (SAS)
+
+#### Authorization
+
+[authorize data access](https://learn.microsoft.com/en-us/azure/storage/common/authorize-data-access)
 
 ## Deploy and manage Azure compute resources
 
@@ -1019,6 +1157,17 @@ Configure scale sets:
 * Instance size(size of each virtual machine in the scale set)
 * Usage of managed disks
 * Scaling beyong 100 instances
+
+!!! tip
+
+    In Azure, you can assign a VM to an availability set only during **initial deployment**
+
+#### Work Mechanism
+
+* Each availability set can be configured with **up to three fault domains and twenty update domains**
+  * These configurations can't be changed once the availablity set has been created
+* Update domain indicate groups of virtual machines and underlying physical hardware that can be rebooted at the same time
+* Fault domain define the group of virtual machines that share a common power source and network switch
 
 ### Configure virtual machine extensions
 
@@ -1124,6 +1273,13 @@ Azure VM extensions can be:
   * When auto swap from a source slot to production is enabled, App Service automatically swaps the app into production after it has warmed up in the source slot.
   * Web apps on Linux don't support auto swap yet.
 
+#### Service Plan
+
+* Shared: designed for development and testing, does not support autoscale and only allow 1 instance
+* Basic: does not support autoscale and is limited to 3 instances
+* Standard: support autoscale, limited to no more than 10 instances
+* Premium: support autoscale with up to 30 instances
+
 #### Managing App Service
 
 * Create App Service
@@ -1168,6 +1324,11 @@ Azure VM extensions can be:
 > A **container group** is a collection of containers that get scheduled on the same host machine.  
 > The containers in a container group share a lifecycle, resources, local network, and storage volumes.  
 > It's similar in concept to a pod in Kubernetes.
+
+!!! note
+
+    You cannot deploy a container group on a subnet that already contains resources such as VMs.  
+    You can deploy a container group on a subnet that already hosts a container group, a subnet that does not host any resources, or you can recreate a new subnet when you create the container group.
 
 #### Azure container instances
 
@@ -1384,7 +1545,16 @@ Azure reserves five IP addresses within each subnet:
 #### Service Tag
 
 > Service tags represent a group of IP addresses.  
-> Valid service tag: VirtualNetwork, Internet, SQL, Storage, AzureLoadBalancer, and AzureTrafficManager.
+> Service tags make it easy to aggregate IP address blocks that otherwise would require several network security group(NSG) rules to accomplish.
+
+Valid service tag:
+
+* VirtualNetwork
+* Internet
+* SQL
+* Storage
+* AzureLoadBalancer
+* AzureTrafficManager
 
 #### Application Security Group
 
@@ -1466,15 +1636,18 @@ Azure reserves five IP addresses within each subnet:
 #### DNS Record Types
 
 * A: the host record, and the most common type of DNS record. It maps the domain or host name to the IP address.
+  * A record set will not be automatically updated or deleted if the target record is modified or deleted
+  * A alias record set is a special type of record set that allows you to create an alternative name for a record set in your domain zone or for resources in your subscription
 * CNAME: Canonical Name record that's used to create an alias from one domain name to another domain name.
 * MX: the mail exchange record. It maps mail requests to your mail server, whether hosted on-premises or in the cloud.
-* TXT: the text record. It's used to associate text strings with a domain name. Azure and Microsoft 365 use TXT records to verify domain ownership.
+* TXT: the text record. It's used to associate text strings with a domain name. Azure and Microsoft 365 use TXT records to **verify domain ownership**.
 * Wildcards
 * CAA (certificate authority)
 * NS (name server)
 * SOA (start of authority)
 * SPF (sender policy framework)
 * SRV (server locations)
+* PTR(pointer): resolve an IP address to a hostname
 
 #### Identify domains and custom domains
 
@@ -1514,6 +1687,7 @@ The initial domain name is intended to be used until a custom domain name is ver
 
 * **Regional VNet peering** connects Azure virtual networks in the **same** region.
 * **Global VNet peering** connects Azure virtual networks in **different** regions.
+* Peering can be configured with VNets in the same subscription, across subscriptions, and across tenants.
 * The virtual networks can't have overlapping IP addresses.
 * After peering, VMs across diff VNets can communicate using private IPs.
 
@@ -1596,9 +1770,10 @@ The initial domain name is intended to be used until a custom domain name is ver
 * The hop can be a virtual network gateway, virtual network, internet, or virtual appliance.
 * Can be associated with more than one VNet subnets
 
-#### service endpoints
+#### Virtual Network service endpoints
 
-> A virtual network service endpoint provides the identity of your virtual network to the Azure service.
+> A virtual network service endpoint provides the identity of your virtual network to the Azure service.  
+> Endpoints allow you to secure your critical Azure service resources to only your virtual networks.
 
 Benefits:
 
@@ -1692,7 +1867,8 @@ Internal load balancer types:
 * Within a virtual network. Load balancing from VMs in the virtual network to a set of VMs that reside within the same virtual network.
 * For a cross-premises virtual network. Load balancing from on-premises computers to a set of VMs that reside within the same virtual network.
 * For multi-tier applications. Load balancing for internet-facing multi-tier applications where the backend tiers are not internet-facing. The backend tiers require traffic load-balancing from the internet-facing tier.
-* For line-of-business applications. Load balancing for line-of-business applications that are hosted in Azure without additional load balancer hardware or software. This scenario includes on-premises servers that are in the set of computers whose traffic is load-balanced.
+* For line-of-business applications. Load balancing for line-of-business applications that are hosted in Azure without additional load balancer hardware or software.
+  * This scenario includes on-premises servers that are in the set of computers whose traffic is load-balanced.
 
 !!! note
 
@@ -1755,7 +1931,8 @@ Internal load balancer types:
 * Rewrite HTTP headers: Rewriting these HTTP headers helps you add security-related header fields or Removing response header fields that can reveal sensitive information.
 * Custom error pages: Application Gateway allows you to create custom error pages instead of displaying default error pages. You can use your own branding and layout using a custom error page.
 * Autoscaling: can scale up or down based on changing traffic load patterns. Autoscaling also removes the requirement to choose a deployment size or instance count during provisioning.
-* Connection draining: Connection draining helps you achieve graceful removal of backend pool members during planned service updates. Once enabled, Application Gateway ensures all deregistering instances of a backend pool don't receive any new request while allowing existing requests to complete within a configured time limit.
+* Connection draining: Connection draining helps you achieve graceful removal of backend pool members during planned service updates.
+  * Once enabled, Application Gateway ensures all deregistering instances of a backend pool don't receive any new request while allowing existing requests to complete within a configured time limit.
 * Support Websocket and HTTP/2 traffic: There's no user-configurable setting to selectively enable or disable WebSocket support.
 * Zone redundancy: A Standard_v2 Application Gateway can extent multiple Availability Zones, offering better fault resiliency and removing the need to provision separate Application Gateways in each zone.
 
@@ -1988,8 +2165,11 @@ The key attributes of an alert rule are:
     * Email will only be sent to Azure AD user members of the role.
     * Email will not be sent to Azure AD groups or service principals.
   * Email/SMS message/Push/Voice - Specify any email, SMS, push, or voice actions.
+    * The maximum number of alerts supported through action group configuration settings is up to **100 notifications per hour**
+    * Both **Voice and SMS** notifications are limited to **no more than one notification every 5 minumtes**
 * Actions configure the method in which actions are performed when the action group triggers.
-  * Automation runbook - An automation runbook is the ability to define, build, orchestrate, manage, and report on workflows that support system and network operational processes. A runbook workflow can potentially interact with all types of infrastructure elements, such as applications, databases, and hardware.
+  * Automation runbook - An automation runbook is the ability to define, build, orchestrate, manage, and report on workflows that support system and network operational processes.
+    * A runbook workflow can potentially interact with all types of infrastructure elements, such as applications, databases, and hardware.
   * Azure Function – Azure functions is a serverless compute service that lets you run event-triggered code without having to explicitly provision or manage infrastructure.
   * ITSM – Connect Azure and a supported IT Service Management (ITSM) product/service. This requires an ITSM Connection.
   * Logic App – Logic apps connect your business-critical apps and services by automating your workflows.
@@ -2015,7 +2195,8 @@ The key attributes of an alert rule are:
 
 #### Monitor Targets
 
-* **Request rates, response times, and failure rates** - Find out which pages are most popular, at what times of day, and where your users are. See which pages perform best. If your response times and failure rates go high when there are more requests, then perhaps you have a resourcing problem.
+* **Request rates, response times, and failure rates** - Find out which pages are most popular, at what times of day, and where your users are. See which pages perform best.
+  * If your response times and failure rates go high when there are more requests, then perhaps you have a resourcing problem.
 * **Dependency rates, response times, and failure rates** - Find out whether external services are slowing you down.
 * **Exceptions** - Analyze the aggregated statistics, or pick specific instances and drill into the stack trace and related requests. Both server and browser exceptions are reported.
 * **Page views and load performance** - reported by your users' browsers.
