📝 doc: 对内容进行些许补充修正

--- a/docs/Python/并发/并发编程.md
+++ b/docs/Python/并发/并发编程.md
@@ -8,9 +8,12 @@
 
 ## Python对并发编程的支持
 
-* 多线程： threading，利用CPU和IO可以同时执行的原理
-* 多进程： multiprocessing， 利用多核CPU的能力
-* 异步IO：asyncio，在单线程利用CPU和IO同时执行的原理实现函数的异步执行
+* 多进程： `multiprocessing`(Process-based)， 利用多核CPU的能力
+* 多线程： `threading`(Thread-based)，利用CPU和IO可以同时执行的原理
+* 异步IO：`asyncio`(Coroutine-based)，在单线程利用CPU和IO同时执行的原理实现函数的异步执行
+
+![Python-Concurrency-API-Decision-Tree](https://superfastpython.com/wp-content/uploads/2022/07/Python-Concurrency-API-Decision-Tree.jpg)
+
 * 使用Lock对资源加锁，防止访问冲突
 * 使用Queue实现不同线程/进程之间的数据通信， 实现生产者-消费者模式
 * 使用线程池Pool/进程池Pool，简化线程/进程的任务提交、等待结束、获取结果
@@ -174,3 +177,7 @@ tasks = [loop.create_task(my_func(url)) for url in urls]
 # 执行事件列表
 loop.run_until_complete(asyncio.wait(tasks))
 ```
+
+## Links
+
+* [How to Choose the Right Python Concurrency API](https://superfastpython.com/python-concurrency-choose-api/)
